// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskList Snapshots matches snapshot with default props 1`] = `
<View
  style={
    {
      "backgroundColor": "#F3F7FA",
      "flex": 1,
    }
  }
  testID="task-list"
>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "minHeight": 200,
        "padding": 32,
      }
    }
    testID="task-list-empty"
  >
    <Text
      style={
        {
          "color": "#747d8c",
          "fontFamily": "Ubuntu-Regular",
          "fontSize": 16,
          "fontWeight": "400",
          "marginTop": 16,
          "textAlign": "center",
        }
      }
      testID="task-list-empty-text"
    >
      No tasks yet. Create one!
    </Text>
  </View>
</View>
`;

exports[`TaskList Snapshots matches snapshot with error state 1`] = `
<View
  style={
    {
      "backgroundColor": "#F3F7FA",
      "flex": 1,
    }
  }
  testID="task-list"
>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "minHeight": 200,
        "padding": 32,
      }
    }
    testID="task-list-empty-error"
  >
    <Text
      style={
        {
          "color": "#F44336",
          "fontFamily": "Ubuntu-Regular",
          "fontSize": 14,
          "fontWeight": "400",
          "marginBottom": 8,
          "textAlign": "center",
        }
      }
      testID="task-list-error-text"
    >
      Failed to load tasks
    </Text>
    <Text
      style={
        {
          "color": "#747d8c",
          "fontFamily": "Ubuntu-Regular",
          "fontSize": 16,
          "fontWeight": "400",
          "marginTop": 16,
          "textAlign": "center",
        }
      }
      testID="task-list-error-hint"
    >
      Pull to refresh
    </Text>
  </View>
</View>
`;

exports[`TaskList Snapshots matches snapshot with loading state 1`] = `
<View
  style={
    {
      "backgroundColor": "#F3F7FA",
      "flex": 1,
    }
  }
  testID="task-list"
>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "minHeight": 200,
        "padding": 32,
      }
    }
    testID="task-list-empty-loading"
  >
    <ActivityIndicator
      color="AppColors.CIBlue"
      size="large"
      testID="task-list-loading-spinner"
    />
    <Text
      style={
        {
          "color": "#747d8c",
          "fontFamily": "Ubuntu-Regular",
          "fontSize": 16,
          "fontWeight": "400",
          "marginTop": 16,
          "textAlign": "center",
        }
      }
      testID="task-list-loading-text"
    >
      Loading tasks...
    </Text>
  </View>
</View>
`;

exports[`TaskList Snapshots matches snapshot with sync indicator 1`] = `
<View
  style={
    {
      "backgroundColor": "#F3F7FA",
      "flex": 1,
    }
  }
  testID="task-list"
>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "minHeight": 200,
        "padding": 32,
      }
    }
    testID="task-list-empty"
  >
    <Text
      style={
        {
          "color": "#747d8c",
          "fontFamily": "Ubuntu-Regular",
          "fontSize": 16,
          "fontWeight": "400",
          "marginTop": 16,
          "textAlign": "center",
        }
      }
      testID="task-list-empty-text"
    >
      No tasks yet. Create one!
    </Text>
  </View>
</View>
`;
